--- a/gb/25/1/18/n14416181.md
+++ b/gb/25/1/18/n14416181.md
@@ -11,7 +11,7 @@
 <p>当他们回家时，他们注意到走道上有灰色的石块残骸散落一地，看起来像是从空中掉落而击碎的。维莱杜姆一开始以为那是屋顶上掉落的某种东西。</p>
 <p>但当维莱杜姆住在附近的岳父母说，他们听到一声巨响，可能是陨石撞击地面时，维莱杜姆才想到要查看门口监视器所拍摄的画面。</p>
 <p>维莱杜姆随后发现，监视器拍到了一颗小陨石撞击他家的走道，而且发出巨大的声响。有专家说，这可能是首次有陨石撞击地面的画面和声音同时被记录下来。</p>
-<p>（点击<U><ahref="https://www.youtube.com/watch?v=X81tO-RnjPQ" target="_blank" rel="noopener">这里</a></U>可以看监视器画面）</p>
+<p>（点击<u><ahref="https://www.youtube.com/watch?v=X81tO-RnjPQ" target="_blank" rel="noopener">这里</a></u>可以看监视器画面）</p>
 <p>维莱杜姆说，他很幸运，因为他几分钟前还站在陨石撞击的走道上。“如果在那里多待一两分钟，我肯定会被击中，可能会被陨石砸死。”</p>
 <p>他补充说，陨石撞击地面的力道很强，以至于在走道上留下一个小的凹陷。</p>
 <p>美国陨石协会（American Meteor Society）的资料显示，陨石进入地球大气层的速度介于每小时2.5万至16万英里（4万至25.6万公里）之间。</p>
@@ -21,37 +21,43 @@
 <p>赫德相信，那颗陨石来自火星和木星之间的小行星带。它的大小介于高尔夫球至棒球之间。它是普通的球粒状陨石（chondrite），也就是最常撞击地球的陨石种类之一。这种陨石由陨石球粒（chondrule）或小的球粒状硅酸盐矿物（如橄榄石和辉石）所组成。</p>
 <p>美国国家航空航天局（NASA）指出，每天有至少40吨重的陨石状物质坠落地球。赫德说，陨石击中人的概率很低，它们比较可能会落入水域中，因为地球表面有71%是水。</p>
 <p>维莱杜姆告诉NPR说，这起陨石撞击事件起初让他变得谨慎起来，每当他外出时，他都会抬头看看。但经过一番反思后，这段经历让他重新思考自己的优先事项和生活中最重要的事情。</p>
-<p>他说：“当我们充满自我时，我们会认为我们的生活是如此重要，而这些宇宙事件却让我们的小担忧相形见绌。”</p>
+<p>他说：“当我们充满自我时，我们会认为我们的生活是如此重要，而这些宇宙事件却让我们的小担忧相形见绌。”◇</p>
 <p>责任编辑：李明</p>
-	
+<div class="related-article" style="display: block;"><span style="color: #000; font-weight: bold;">推荐阅读：</span></div>
+<ul class="related-posts" style="color: #0000ff; list-style: inside;">
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388440.md#1" target="_blank" rel="noopener">火星是否曾宜居？一颗陨石或提供直接证据</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414023.md#1" target="_blank" rel="noopener">NASA卫星在火星上拍到巨大的“腰豆”</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/12/5/n14385061.md#1" target="_blank" rel="noopener">澳男捡到怪石以为是黄金 专家：它比金子还贵</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361608.md#1" target="_blank" rel="noopener">新研究揭示地球上大多数陨石的来源</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/21/9/2/n13204952.md#1" target="_blank" rel="noopener">美国女子在家睡觉 被陨石砸到</a></span></li>
+</ul>
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/10/n13992768.md#1">天降奇石砸中美国民宅 或为几十亿年前陨石</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/25/n14003967.md#1">45亿年前陨石坠落德国民宅后院 值21万美元</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/5/n14385061.md#1">澳男捡到怪石以为是黄金 专家：它比金子还贵</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14395911.md#1">韦伯望远镜发现138颗新的“迷你”小行星</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/2/n10015824.md#1" target="_blank">文武：中共篡政（三）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/6/n10461502.md#1" target="_blank">四位中国军医的人生奇遇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/17/n10309909.md#1" target="_blank">心升：以史为镜看毛邪（中）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/11/13/n2327659.md#1" target="_blank">法轮功简介</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405076.md#1">人算不如天算 嫉妒心反害了自身</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/11/n14410876.md#1">【未解之谜】触摸UFO 美军人意外接获神秘信息</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/13/n10781563.md#1">在宋朝作诗能转运？宋祁错失状元得赐婚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412120.md#1">【未解之谜】痴迷好莱坞 《乱世佳人》剧作家转世重生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415932.md#1">【马克时空】川普助力 以哈同意停火 中东迎变局</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415283.md#1">【秦鹏观察】万科CEO被抓 习直追毛衰退纪录</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14415185.md#1">【军事情报局】真要打台湾？中共登陆驳船详解</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414357.md#1">中国新年临近 市场萧条 民叹迎惨淡新年</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414466.md#1">中共外交人事异动 毛宁上位 王毅职务将变？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414543.md#1">缅甸电诈疑有中共身影 王星获救另有内幕？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414361.md#1">周星驰《女足》开机时间流出 演出阵容引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14413952.md#1">DC电影《超少女：明日之女》开拍 2026年上映</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413559.md#1">被传洛杉矶两套豪宅被烧毁 冯小刚回应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14413620.md#1">野火仍肆虐 李奥纳多搭私人飞机离开加州惹议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14413925.md#1">女儿在杜拜搭救护车送医 沈春华曝当地医疗费用</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414595.md#1">如何降低患大肠癌风险？ 专家教你简单一招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14413971.md#1">研究：眼睛大又亮 让别人更愿意掏钱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415611.md#1">用泡过的茶包做堆肥？ 你应该先做一件事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/11/n14411410.md#1">体内湿气重有何警讯？ 中医教你排湿妙招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/10/n14410514.md#1">人为什么会生病？为何出现慢性发炎？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545556.md#1">【佳音时刻】中共最怕什么？王毅曝党国机密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544299.md#1">饰《鱿鱼游戏3》反角 任时完粉丝数暴涨百万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544989.md#1">开饺子店被吐槽出餐慢 大陆演员谭凯直播致歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539807.md#1">简单穴位按摩与食疗 保您不再做“起夜家”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543550.md#1">美国独立日烟火秀 纽约五大区最佳观赏地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/1/18/n14416181.htm">加拿大监视器拍到陨石坠地 或是全球首见</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416181.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
